Все должно работать корректно, кроме хелп